--- a/scss/themes/dark/_variables.scss
+++ b/scss/themes/dark/_variables.scss
@@ -833,24 +833,93 @@ $calendar-theme-map: (
   "calendar-cell-range-hover-border-color":  $calendar-cell-range-hover-border-color-dt
 ) !default;
 
+$date-picker-color-dt:                    $input-color-dt !default;
+$date-picker-bg-dt:                       $input-bg-dt !default;
+$date-picker-border-color-dt:             $input-border-color-dt !default;
+$date-picker-focus-color-dt:              $input-focus-color-dt !default;
+$date-picker-focus-bg-dt:                 $input-focus-bg-dt !default;
+$date-picker-focus-border-color-dt:       $input-focus-border-color-dt !default;
+$date-picker-disabled-color-dt:           $disabled-dt !default;
+$date-picker-disabled-bg-dt:              $input-disabled-bg-dt !default;
+$date-picker-cleaner-icon-color-dt:       $medium-emphasis-dt !default;
+$date-picker-cleaner-icon-dt:             url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$date-picker-cleaner-icon-color-dt}' points='306.912 214.461 256 265.373 205.088 214.461 182.461 237.088 233.373 288 182.461 338.912 205.088 361.539 256 310.627 306.912 361.539 329.539 338.912 278.627 288 329.539 237.088 306.912 214.461'></polygon><path fill='#{$date-picker-cleaner-icon-color-dt}' d='M472,96H384V40H352V96H160V40H128V96H40a24.028,24.028,0,0,0-24,24V456a24.028,24.028,0,0,0,24,24H472a24.028,24.028,0,0,0,24-24V120A24.028,24.028,0,0,0,472,96Zm-8,352H48V128h80v40h32V128H352v40h32V128h80Z'></path></svg>") !default;
+$date-picker-cleaner-icon-hover-color-dt: $high-emphasis-dt !default;
+$date-picker-cleaner-icon-hover-dt:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$date-picker-cleaner-icon-hover-color-dt}' points='306.912 214.461 256 265.373 205.088 214.461 182.461 237.088 233.373 288 182.461 338.912 205.088 361.539 256 310.627 306.912 361.539 329.539 338.912 278.627 288 329.539 237.088 306.912 214.461'></polygon><path fill='#{$date-picker-cleaner-icon-hover-color-dt})' d='M472,96H384V40H352V96H160V40H128V96H40a24.028,24.028,0,0,0-24,24V456a24.028,24.028,0,0,0,24,24H472a24.028,24.028,0,0,0,24-24V120A24.028,24.028,0,0,0,472,96Zm-8,352H48V128h80v40h32V128H352v40h32V128h80Z'></path></svg>") !default;
+$date-picker-indicator-icon-color-dt:     $medium-emphasis-dt !default;
+$date-picker-indicator-icon-dt:           url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><path fill='#{$date-picker-indicator-icon-color-dt}' d='M472,96H384V40H352V96H160V40H128V96H40a24.028,24.028,0,0,0-24,24V456a24.028,24.028,0,0,0,24,24H472a24.028,24.028,0,0,0,24-24V120A24.028,24.028,0,0,0,472,96Zm-8,352H48V128h80v40h32V128H352v40h32V128h80Z'></path><rect width='32' height='32' x='112' y='224' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='200' y='224' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='280' y='224' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='368' y='224' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='112' y='296' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='200' y='296' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='280' y='296' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='368' y='296' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='112' y='368' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='200' y='368' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='280' y='368' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='368' y='368' fill='#{$date-picker-indicator-icon-color-dt}'></rect></svg>") !default;
+$date-picker-separator-icon-color-dt:     $medium-emphasis-dt !default;
+$date-picker-separator-icon-dt:           url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$date-picker-separator-icon-color-dt}' points='359.873 121.377 337.246 144.004 433.243 240.001 16 240.001 16 240.002 16 272.001 16 272.002 433.24 272.002 337.246 367.996 359.873 390.623 494.498 256 359.873 121.377'></polygon></svg>") !default;
+$date-picker-separator-icon-rtl-dt:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$date-picker-separator-icon-color-dt}' points='497.333 239.999 80.092 239.999 176.087 144.004 153.46 121.377 18.837 256 153.46 390.623 176.087 367.996 80.09 271.999 497.333 271.999 497.333 239.999'></polygon></svg>") !default;
+$date-picker-dropdown-color-dt:           $body-color-dt !default;
+$date-picker-dropdown-bg-dt:              $bg-elevation-8 !default;
+$date-picker-dropdown-border-color-dt:    $border-color-dt !default;
+$date-picker-ranges-border-color-dt:      $border-color-dt !default;
 $date-picker-timepicker-border-color-dt:  $border-color-dt !default;
+$date-picker-footer-border-color-dt:      $border-color-dt !default;
 
 $date-picker-theme-map: (
-  "date-picker-timepicker-border-top":  $date-picker-timepicker-border-width solid $date-picker-timepicker-border-color-dt
+  "date-picker-color":                    $date-picker-color-dt,
+  "date-picker-bg":                       $date-picker-bg-dt,
+  "date-picker-border-color":             $date-picker-border-color-dt,
+  "date-picker-disabled-color":           $date-picker-disabled-color-dt,
+  "date-picker-disabled-bg":              $date-picker-disabled-bg-dt,
+  "date-picker-focus-color":              $date-picker-focus-color-dt,
+  "date-picker-focus-bg":                 $date-picker-focus-bg-dt,
+  "date-picker-focus-border-color":       $date-picker-focus-border-color-dt,
+  "date-picker-cleaner-icon":             $date-picker-cleaner-icon-dt,
+  "date-picker-cleaner-icon-hover":       $date-picker-cleaner-icon-hover-dt,
+  "date-picker-indicator-icon":           $date-picker-indicator-icon-dt,
+  "date-picker-separator-icon":           $date-picker-separator-icon-dt,
+  "date-picker-separator-icon-rtl":       $date-picker-separator-icon-rtl-dt,
+  "date-picker-dropdown-color":           $date-picker-dropdown-color-dt,
+  "date-picker-dropdown-border-color":    $date-picker-dropdown-border-color-dt,
+  "date-picker-dropdown-bg":              $date-picker-dropdown-bg-dt,
+  "date-picker-ranges-border-color":      $date-picker-ranges-border-color-dt,
+  "date-picker-timepicker-border-color":  $date-picker-timepicker-border-color-dt,
+  "date-picker-footer-border-color":      $date-picker-footer-border-color-dt
 ) !default;
 
-$picker-footer-border-color-dt:  $border-color-dt !default;
-
-$picker-theme-map: (
-  "input-bg":                        $input-bg-dt,
-  "input-group-addon-border-color":  transparent,
-  "picker-footer-border-top":        $picker-footer-border-width solid $picker-footer-border-color-dt
-) !default;
-
-$time-picker-roll-col-color-dt:     $border-color-dt !default;
+$time-picker-color-dt:                         $input-color-dt !default;
+$time-picker-bg-dt:                            $input-bg-dt !default;
+$time-picker-border-color-dt:                  $input-border-color-dt !default;
+$time-picker-focus-color-dt:                   $input-focus-color-dt !default;
+$time-picker-focus-bg-dt:                      $input-focus-bg-dt !default;
+$time-picker-focus-border-color-dt:            $input-focus-border-color-dt !default;
+$time-picker-disabled-color-dt:                $disabled-dt !default;
+$time-picker-disabled-bg-dt:                   $input-disabled-bg-dt !default;
+$time-picker-cleaner-icon-color-dt:            $medium-emphasis-dt !default;
+$time-picker-cleaner-icon-dt:                  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$time-picker-cleaner-icon-color-dt}' points='348.071 141.302 260.308 229.065 172.545 141.302 149.917 163.929 237.681 251.692 149.917 339.456 172.545 362.083 260.308 274.32 348.071 362.083 370.699 339.456 282.935 251.692 370.699 163.929 348.071 141.302' class='ci-primary'></polygon><path fill='#{$time-picker-cleaner-icon-color-dt}' d='M425.706,86.294A240,240,0,0,0,86.294,425.706,240,240,0,0,0,425.706,86.294ZM256,464C141.309,464,48,370.691,48,256S141.309,48,256,48s208,93.309,208,208S370.691,464,256,464Z' class='ci-primary'></path></svg>") !default;
+$time-picker-cleaner-icon-hover-color-dt:      $high-emphasis-dt !default;
+$time-picker-cleaner-icon-hover-dt:            url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$time-picker-cleaner-icon-hover-color-dt}' points='348.071 141.302 260.308 229.065 172.545 141.302 149.917 163.929 237.681 251.692 149.917 339.456 172.545 362.083 260.308 274.32 348.071 362.083 370.699 339.456 282.935 251.692 370.699 163.929 348.071 141.302' class='ci-primary'></polygon><path fill='#{$time-picker-cleaner-icon-hover-color-dt}' d='M425.706,86.294A240,240,0,0,0,86.294,425.706,240,240,0,0,0,425.706,86.294ZM256,464C141.309,464,48,370.691,48,256S141.309,48,256,48s208,93.309,208,208S370.691,464,256,464Z' class='ci-primary'></path></svg>") !default;
+$time-picker-indicator-icon-color-dt:          $medium-emphasis-dt !default;
+$time-picker-indicator-icon-dt:                url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$time-picker-indicator-icon-color-dt}' points='271.514 95.5 239.514 95.5 239.514 273.611 355.127 328.559 368.864 299.657 271.514 253.389 271.514 95.5' class='ci-primary'></polygon><path fill='#{$time-picker-indicator-icon-color-dt}' d='M256,16C123.452,16,16,123.452,16,256S123.452,496,256,496,496,388.548,496,256,388.548,16,256,16Zm0,448C141.125,464,48,370.875,48,256S141.125,48,256,48s208,93.125,208,208S370.875,464,256,464Z' class='ci-primary'></path></svg>") !default;
+$time-picker-dropdown-color-dt:                $body-color-dt !default;
+$time-picker-dropdown-bg-dt:                   $bg-elevation-8 !default;
+$time-picker-dropdown-border-color-dt:         $border-color-dt !default;
+$time-picker-roll-col-border-color-dt:         $border-color-dt !default;
+$time-picker-inline-select-color-dt:           $input-color-dt !default;
+$time-picker-inline-select-disabled-color-dt:  $gray-600 !default;
+$time-picker-footer-border-color-dt:           $border-color-dt !default;
 
 $time-picker-theme-map: (
-  "time-picker-roll-col-border":  $time-picker-roll-col-border-width solid $time-picker-roll-col-color-dt
+  "time-picker-color":                         $time-picker-color-dt,
+  "time-picker-bg":                            $time-picker-bg-dt,
+  "time-picker-border-color":                  $time-picker-border-color-dt,
+  "time-picker-disabled-color":                $time-picker-disabled-color-dt,
+  "time-picker-disabled-bg":                   $time-picker-disabled-bg-dt,
+  "time-picker-focus-color":                   $time-picker-focus-color-dt,
+  "time-picker-focus-bg":                      $time-picker-focus-bg-dt,
+  "time-picker-focus-border-color":            $time-picker-focus-border-color-dt,
+  "time-picker-cleaner-icon":                  $time-picker-cleaner-icon-dt,
+  "time-picker-cleaner-icon-hover":            $time-picker-cleaner-icon-hover-dt,
+  "time-picker-indicator-icon":                $time-picker-indicator-icon-dt,
+  "time-picker-dropdown-color":                $time-picker-dropdown-color-dt,
+  "time-picker-dropdown-border-color":         $time-picker-dropdown-border-color-dt,
+  "time-picker-dropdown-bg":                   $time-picker-dropdown-bg-dt,
+  "time-picker-roll-col-border-color":         $time-picker-roll-col-border-color-dt,
+  "time-picker-inline-select-color":           $time-picker-inline-select-color-dt,
+  "time-picker-inline-select-disabled-color":  $time-picker-inline-select-disabled-color-dt,
+  "time-picker-footer-border-color":           $time-picker-footer-border-color-dt
 ) !default;
 
 $theme-map: (
@@ -879,7 +948,6 @@ $theme-map: (
   "nav":                $nav-theme-map,
   "offcanvas":          $offcanvas-theme-map,
   "pagination":         $pagination-theme-map,
-  "picker":             $picker-theme-map,
   "popover":            $popover-theme-map,
   "progress":           $progress-theme-map,
   "sidebar":            $sidebar-theme-map,
